--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pkger",
   "version": "1.0.0",
-  "description": "bad rollup as a service.",
+  "description": "bad esbuild as a service.",
   "main": "index.js",
   "scripts": {
     "start": "node -r esm index.js"
@@ -12,17 +12,14 @@
     "@pnpm/package-requester": "^11.0.5",
     "@pnpm/read-package-json": "^3.1.0",
     "@pnpm/tarball-fetcher": "^5.1.13",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.2",
+    "connect-query": "^1.0.0",
+    "esbuild": "^0.14.28",
+    "esm": "^3.2.25",
+    "http-cache-middleware": "^1.3.1",
     "pnpm": "^4.13.0",
     "restana": "^3.x.x",
-    "rollup": "^2.5.0",
-    "tempy": "^0.5.0",
-    "esm": "^3.2.25",
     "serve-static": "^1.14.1",
-    "http-cache-middleware": "^1.3.1",
-    "connect-query": "^1.0.0"
+    "tempy": "^0.5.0"
   },
   "engines": {
     "node": ">=12.x"
